blur App for P&G

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">GyroscopeExplorer</string>
+    <string name="app_name">Blur Transformation</string>
     <string name="sensor_label">Sensor</string>
     <string name="sensor_calibrated_name">Gyroscope</string>
     <string name="sensor_active">Active</string>
